[tool.poetry]
name = "ccpublisher"
version = "1.0.1"
description = "Cameo Collaborator Publisher service for MD"
license = "AGPL-3.0-or-later"
readme = "README.md"
authors = ["Marco Fagiolini <mfx@amdx.de>"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Framework :: AsyncIO",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]
repository = "https://github.com/amdx/ccpublisher"

[tool.poetry.scripts]
ccpublisher = "ccpublisher.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
aiohttp = "^3.8.1"
marshmallow = "^3.17.0"
aiohttp-apispec = "^2.2.3"
aiohttp-jinja2 = "^1.5"
PyYAML = "^6.0"
aionotify = "^0.2.0"
aiofiles = "^0.8.0"
atwc = "^1.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "5.2.3"
sphinx-rtd-theme = "1.0.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
